@@ -107,14 +107,24 @@ detail::unary<E1,detail::cal_unary_cast<double2_type,typename E1::value_type> > 
 }
 
 template<class E1,class E2>
-variable<typename detail::cal_binary_shl<typename E1::value_type,typename E2::value_type>::value_type> rotate( const detail::expression<E1>& e1, const detail::expression<E2>& e2 )
+variable<typename E1::value_type> rotate( const detail::expression<E1>& e1, const detail::expression<E2>& e2 )
 {
+#if defined(__CAL_H__)
+    if( Source::info.available && Source::info.target>=CAL_TARGET_CYPRESS ) {
+       return bitalign(e1(),e1(),e2());
+    }
+#endif
     return (e1()<<e2()) | (e1() >> (variable<typename E2::value_type>(32)-e2()));
 }
 
 template<class E1>
 variable<typename E1::value_type> rotate( const detail::expression<E1>& e1, int shift )
 {
+#if defined(__CAL_H__)
+    if( Source::info.available && Source::info.target>=CAL_TARGET_CYPRESS ) {
+       return bitalign(e1(),e1(),variable<typename detail::resize_base_type<uint_type,E1::value_type::component_count>::value>(shift));
+    }
+#endif
     return ( e1() << variable<typename detail::resize_base_type<uint_type,E1::value_type::component_count>::value>(shift) ) |
            ( e1() >> variable<typename detail::resize_base_type<uint_type,E1::value_type::component_count>::value>(32-shift) );
 }
